# CABench

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  INFO.md  README.md  SCHEMA_POLICY.md  SECURITY.md  bench.yaml  contracts.py  convert_predictions.py  eval.py  generate.py  generate_dataset.py  json_extract.py  license  main.py  migrate_artifacts.py  orchestrator.py  pyproject.toml  requirements.txt  rules.py  simulate.py
.github/workflows/: bench_dry.yml  ci.yml
cabench/: __init__.py  cli.py  contracts.py  convert.py  dataset.py  env.py  generate.py  json_extract.py  migrate.py  orchestrator.py  report.py  rules.py  scoring.py  simulate.py
cabench/llm/: __init__.py  rate_limit.py  response_logger.py  runner.py
logs/: gpt-4.1-nano_quick1d_32_usage.csv  gpt-4.1-nano_quick2d_16x16_usage.csv  gpt41_val_public_usage.csv  master_usage.csv  usage_hello.csv
results/: scores.csv
tests/: test_contracts.py  test_convert.py  test_dataset_cli.py  test_dataset_cli_1d.py  test_dataset_cli_2d.py  test_env.py  test_eval.py  test_generator.py  test_generator_1d.py  test_generator_2d.py  test_json_extract.py  test_main_cli.py  test_migrate_artifacts.py  test_orchestrator_cli.py  test_orchestrator_flow.py  test_orchestrator_metadata.py  test_orchestrator_usage_csv.py  test_package_entrypoint.py  test_pipeline_mocked_openai.py  test_report_results.py  test_resume_reconcile.py  test_rules.py  test_simulate.py  test_simulate_1d.py  test_simulate_2d.py  test_wrapper_status.py
wrappers/: __init__.py  one_call_trial.py  openai_v1.py  rate_limit.py  response_logger.py  run_llm_json.py  run_llm_json_2d.py
